mychart/templates/student-gateway.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: Gateway 
metadata: 
  name: student-gateway 
spec: 
  selector: 
    istio: ingress 
  servers: 
  - port: 
      number: 80 
      name: http 
      protocol: HTTP 
    hosts: 
    - "*" 
---
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata: 
  name: student-virtualservice 
spec: 
  hosts: 
    - "*" 
  gateways: 
    - student-gateway 
  http: 
    - match: 
      - uri: 
          prefix: /api
      rewrite:
        uri: / 
      route: 
      - destination: 
          host: student-app-api.default.svc.cluster.local 
          port: 
            number: 8080 
    - route: 
      - destination: 
          host: student-app-client-service.default.svc.cluster.local 
          port: 
            number: 80
